# src/api/order_routes.js
@@ -1,11 +1,14 @@
 import { Router } from 'express';
 import { protect } from '../middleware/auth_middleware.js';
 
-import { createNote } from './note_controller.js'; 
+import { createOrder, getOrders } from './order_controller.js';
 
 const router = Router();
 
-// POST /api/orders
-router.post('/', protect, createNote); 
+// POST /api/orders - Creates a new order
+router.post('/', protect, createOrder); 
+
+// GET /api/orders - Fetches a list of the current user's orders
+router.get('/', protect, getOrders); 
 
 export default router;
