# src/api/product_routes.js
@@ -6,4 +6,7 @@ const router = Router();
 // GET /api/products - (Unprotected)
 router.get('/', productController.listActiveProducts);
 
+// GET /api/products/:id
+router.get('/:id', productController.getSingleActiveProduct);
+
 export default router;
